syntax = "proto3";

option csharp_namespace = "Parstech.Shop.Shared.Protos.ConfigAdmin";

package configAdmin;

service ConfigAdminService {
  // API operations
  rpc GetCreditOfNationalCode (NationalCodeRequest) returns (CreditInfoResponse);
  rpc AddProductsByExcel (ExcelFileRequest) returns (ResponseDto);
  rpc GetApiData (ApiDataRequest) returns (ApiDataResponse);
  
  // WordPress operations
  rpc GetProductsFromWordpress (WordpressPageRequest) returns (WordpressProductsResponse);
  rpc GetProductFromWordpressById (WordpressProductIdRequest) returns (WordpressProductResponse);
  rpc GetCateguriesFromWordpress (WordpressPageRequest) returns (WordpressCategoriesResponse);
  
  // Maintenance operations
  rpc FixProductStocks (EmptyRequest) returns (ResponseDto);
  rpc FixDublicate (EmptyRequest) returns (ResponseDto);
  rpc DatetimeChange (EmptyRequest) returns (ResponseDto);
  rpc SetBestStockId (EmptyRequest) returns (ResponseDto);
  
  // Excel import operations
  rpc ExcelFixProducts (ExcelFileRequest) returns (ResponseDto);
  rpc EditCateguriesOfProducts (ExcelFileRequest) returns (ResponseDto);
  rpc AddUsersAndWalletCredit (ExcelFileRequest) returns (ResponseDto);
  rpc UpdateUserWalletsCredit (ExcelFileRequest) returns (ResponseDto);
  rpc FillProductCode (ExcelFileRequest) returns (ResponseDto);
}

message EmptyRequest {
}

message NationalCodeRequest {
  int32 seller_id = 1;
  string national_code = 2;
}

message CreditInfoResponse {
  int32 total_credit = 1;
  int32 total_real_credit = 2;
  int32 check_credit = 3;
  int32 bon_credit = 4;
  int32 cash_credit = 5;
  int32 total_assigned_credit = 6;
  int32 total_spent_credit = 7;
  int32 check_unpassed_value = 8;
  int32 real_check_credit = 9;
  repeated string available_bons = 10;
  bool success = 11;
  string message = 12;
}

message ExcelFileRequest {
  string file_name = 1;
}

message ResponseDto {
  bool status = 1;
  string message = 2;
  int32 code = 3;
}

message ApiDataRequest {
  string api_name = 1;
  map<string, string> parameters = 2;
}

message ApiDataResponse {
  string data = 1;
  bool success = 2;
  string message = 3;
}

message WordpressPageRequest {
  int32 page_number = 1;
}

message WordpressProductsResponse {
  repeated WordpressProductData products = 1;
  bool success = 2;
  string message = 3;
}

message WordpressProductIdRequest {
  string product_id = 1;
}

message WordpressProductResponse {
  WordpressProductData product = 1;
  bool success = 2;
  string message = 3;
}

message WordpressCategoriesResponse {
  repeated WordpressCategoryData categories = 1;
  bool success = 2;
  string message = 3;
}

message WordpressProductData {
  string id = 1;
  string name = 2;
  string slug = 3;
  string permalink = 4;
  string sku = 5;
  string price = 6;
  string regular_price = 7;
  string sale_price = 8;
  string status = 9;
  bool featured = 10;
  string description = 11;
  string short_description = 12;
  repeated string images = 13;
  repeated WordpressCategoryData categories = 14;
  repeated WordpressAttributeData attributes = 15;
}

message WordpressCategoryData {
  int32 id = 1;
  string name = 2;
  string slug = 3;
}

message WordpressAttributeData {
  string id = 1;
  string name = 2;
  repeated string options = 3;
} 